<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoboLiterate</string>
    <string name="action_settings">Settings</string>
    <string name="app_welcome">Welcome to Robot Theatre</string>
    <string name="access_main_activity">Connect to robot</string>
    <string name="about">About</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="button_scan">Scan for robot</string>
    <string name="bluetooth_disabled">Please turn bluetooth on from the options menu.</string>
    <string name="no_bluetooth">This application only runs on a bluetooth enabled device.</string>
    <string name="bluetooth_active">Bluetooth is active</string>
    <string name="bluetooth_error">There was an error connecting to Bluetooth</string>
    <string name="select_device">Select device</string>
    <string name="none_found">No devices found</string>
    <string name="none_paired">None paired</string>
    <string name="scanning">Scanning</string>
    <string name="no_robot">No robot connected</string>
    <string name="robot_error">There was an error connecting with a suitable robot</string>
    <string name="select_robot">Select your robot</string>
    <string name="robot_connected">Robot chosen</string>
    <string name="shaking_hands">Hello robot, this is Android calling!!</string>
    <string name="handshake_robot">Saying hello to robot</string>
    <string name="remote_service_started">Remote service started</string>
    <string name="remote_service_stopped">Remote service stopped</string>
    <string name="remote_service_label">Robot Theatre</string>
    <string name="remote_service_disconnected">Remote service disconnected</string>
    <string name="no_paired_robot">No paired robot</string>
    <string name="already_pairing">Already pairing with robot.</string>
    <string name="pairing_success">Robot paired successfully</string>
    <string name="robot_failed_to_accept_instruction">The robot is apparently not following orders.
    </string>
    <string name="uploading_file">Uploading file</string>
    <string name="uploaded_file">File uploaded successfully</string>
    <string name="cancel">Cancel</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connecting_to_robot">Preparing robot...</string>
    <string name="robot_selected">Robot selected</string>
    <string name="available_devices">Devices detected</string>
    <string name="button_cancel">Cancel</string>
    <string name="robot_theatre">Robot Theatre</string>
    <string name="pick_soundfile">Pick sound</string>
    <string name="loading">Uploading to robot</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello</string>
    <string name="name_of_sound">Type here</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="new_story">PROGRAM</string>
    <string name="remote_controller">PLAY</string>
    <string name="name_of_story">Program title</string>
    <string name="continue_story">Continue current program</string>
    <string name="saved_stories">Saved Programs</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_play">Play</string>
    <string name="action_bar_save">Save</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="add_sentence">Add sentence</string>
    <string name="action_bar_record">RECORD</string>
    <string name="connecting_please_wait">Connecting to robot. Please wait...</string>
    <string name="configure_robot">Configure your robot ports:</string>
    <string name="motor_left">Left</string>
    <string name="motor_right">Right</string>
    <string name="motor_ports">Motor ports</string>
    <string name="sensor_ports">Sensor ports</string>
    <string name="sound_sensor">Sound</string>
    <string name="light_sensor">Light</string>
    <string name="ultrasonic_sensor">Ultra \nsonic</string>
    <string name="run_program">RUN PROGRAM</string>
    <string name="ok">OK</string>
    <string name="configure_device">Configure your robot</string>
    <string name="console">Console</string>
    <string name="press_start_to_run">Press start to run your program</string>
    <string name="start">START</string>
    <string name="ready">Ready</string>
    <string name="stop_program">STOP PROGRAM</string>
    <string name="sensor_reading">Sensor reading</string>
    <string name="robot_address">Robot address</string>
    <string name="dash">-</string>
    <string name="new_text">New text</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="icon">icon</string>
    <string name="robot_name">Robot name</string>
    <string name="my_program">My program</string>
    <string name="story_saved">Your program has been saved</string>
    <string name="play_sound">Preview this recording</string>
    <string name="file_not_saved">Your sound was not saved.</string>
    <string name="name_your_recording">Name your recording</string>
    <string name="press_ok_when_done">Press OK when you\'re done.</string>
    <string name="stop">STOP</string>
    <string name="now_recording">Recording...</string>
    <string name="now_playing">Now playing...</string>
    <string name="no_more_devices">No more devices found</string>
    <string name="no_EV3">This application is not yet compatible with EV3. Watch this space, though!</string>
    <string name="switch_sensor">Touch</string>
    <string name="motor_arm">Arm</string>
    <string name="color_sensor">Color</string>
    <string name="color_light">Light</string>
    <string name="console_no_sensor">sensor not found.</string>
    <string name="console_no_motor">Motor not connected. Check your port configuration.</string>
    <string name="console_sensor_error">sensor could not be read.</string>
    <string name="choose_robot_type">Select your robot version</string>
    <string name="cannot_get_robottype">Robot is not communicating proper</string>
    <string name="nxt">NXT</string>
    <string name="ev3">EV3</string>
    <string name="operate_motor_arm">OPERATE MOTOR ARM</string>
    <string name="title_start_new_program">Start a new program?</string>
    <string name="message_start_new_program">Do you want to start a new program or continue with your current one?</string>
    <string name="continue_with_current">Continue</string>
    <string name="new_program">Start again</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="infrared_sensor">Infra red</string>


</resources>
